# romi-apps

./: .gitignore  .gitmodules  CMakeLists.txt  romi_config.h.cmake
apps/: CMakeLists.txt
apps/romi-camera/: CMakeLists.txt  CameraAdaptor.cpp  CameraAdaptor.h  CameraConfigManager.cpp  CameraConfigManager.h  CameraFactory.cpp  CameraFactory.h  CameraInfo.cpp  CameraInfo.h  CameraInfoIO.cpp  CameraInfoIO.h  CameraIntrinsics.cpp  CameraIntrinsics.h  CameraWithConfig.cpp  CameraWithConfig.h  ExternalCamera.cpp  ExternalCamera.h  FakeCamera.cpp  FakeCamera.h  FileCamera.cpp  FileCamera.h  ICameraDistortion.h  ICameraInfo.h  ICameraInfoIO.h  ICameraIntrinsics.h  LibCamera.cpp  LibCamera.h  SimpleRadialDistortion.cpp  SimpleRadialDistortion.h  USBCamera.cpp  USBCamera.h  camera_v4l.cpp  camera_v4l.h  main.cpp
apps/romi-cnc/: CMakeLists.txt  CNCAdaptor.cpp  CNCAdaptor.h  CNCFactory.cpp  CNCFactory.h  CNCOptions.cpp  CNCOptions.h  main.cpp
apps/romi-cnc/oquam/: ATDC.cpp  FakeCNCController.h  Helix.cpp  Helix.h  ICNCController.h  Oquam.cpp  Oquam.h  OquamSettings.cpp  OquamSettings.h  Section.cpp  Section.h  SmoothPath.cpp  SmoothPath.h  StepperController.cpp  StepperController.h  StepperSettings.cpp  StepperSettings.h  is_valid.cpp  plotter.cpp  plotter.h  print.cpp  print.h
apps/romi-config/: CMakeLists.txt  ConfigAdaptor.cpp  ConfigAdaptor.h  main.cpp
config/: config-pi-camera-v3.json
libromi/: CMakeLists.txt
libromi/include/: v3.h
libromi/include/api/: ActivityHelper.h  CNCRange.h  CameraSettings.h  DeviceData.h  DummyLocationProvider.h  Gps.h  GpsLocationProvider.h  IActivity.h  ICNC.h  ICamera.h  ICameraSettings.h  IConfigManager.h  IDeviceData.h  IGPS.h  ILocationProvider.h  IMetaFolder.h  IPowerDevice.h  IRange.h  ISession.h  Image.h  JsonFieldNames.h  MetaFolder.h  Path.h  Range.h  Session.h
libromi/include/configuration/: ConfigurationProvider.h  GetOpt.h  IOptions.h  LocalConfig.h  RomiOptions.h
libromi/include/rpc/: MethodsCNC.h  MethodsCamera.h  MethodsConfig.h  RcomLog.h  RemoteCNC.h  RemoteCamera.h  RemoteConfig.h
libromi/include/util/: Clock.h  ClockAccessor.h  FileUtils.h  IClock.h  ILogWriter.h  ILogger.h  ImageIO.h  LogWriter.h  Logger.h  RomiSerialLog.h  StringUtils.h  stb_includes.h
libromi/src/api/: ActivityHelper.cpp  CNCRange.cpp  CameraSettings.cpp  DeviceData.cpp  DummyLocationProvider.cpp  Gps.cpp  GpsLocationProvider.cpp  Image.cpp  MetaFolder.cpp  Path.cpp  Range.cpp  Session.cpp
libromi/src/configuration/: GetOpt.cpp  LocalConfig.cpp  RomiOptions.cpp
libromi/src/rpc/: RemoteCNC.cpp  RemoteCamera.cpp  RemoteConfig.cpp
libromi/src/util/: Clock.cpp  ClockAccessor.cpp  FileUtils.cpp  ImageIO.cpp  LogWriter.cpp  Logger.cpp  RomiSerialLog.cpp  StringUtils.cpp
python/: Readme.md  pyproject.toml
python/src/: romi-cablebot.py  romi-plantscanner.py
python/src/romi/: camera.py  cnc.py
