[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "romi"
version = "0.1.0"
authors = [
  { name="Peter Hanappe, Doug Boari", email="peter.hanappe@sony.com" },
]
description = "Python API to communicate with the ROMI apps"
readme = "Readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems"
]
license = "LGPL-2.1"
license-files = ["LICEN[CS]E*"]
dependencies=['rcom']


[project.urls]
Homepage = "https://github.com/romi/romi-apps"

